[package]
name = "candle-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.3" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.3" }
hf-hub = "0.4.1"
tokio = "1.43.0"
